[gd_scene load_steps=3 format=3 uid="uid://p7hx2grevdey"]

[ext_resource type="Script" uid="uid://c331jas1b832c" path="res://scripts/designer/SpecificationsPanel.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_specs_panel"]
bg_color = Color(0.101961, 0.101961, 0.101961, 0.4)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.290196, 0.886275, 0.886275, 1)

[node name="SpecificationsPanel" type="Panel"]
custom_minimum_size = Vector2(400, 260)
offset_right = 400.0
offset_bottom = 260.0
theme_override_styles/panel = SubResource("StyleBoxFlat_specs_panel")
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="HeaderLabel" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.29, 0.886, 0.886, 1)
theme_override_font_sizes/font_size = 18
text = "⚒ SPECIFICATIONS"
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="ContentMargin" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ContentContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ContentMargin"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="ComponentSection" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ContentMargin/ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ComponentLabel" type="Label" parent="VBoxContainer/ScrollContainer/ContentMargin/ContentContainer/ComponentSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "COMPONENT"

[node name="ComponentValue" type="Label" parent="VBoxContainer/ScrollContainer/ContentMargin/ContentContainer/ComponentSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Select a component"

[node name="DimensionsSection" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ContentMargin/ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="DimensionsLabel" type="Label" parent="VBoxContainer/ScrollContainer/ContentMargin/ContentContainer/DimensionsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "DIMENSIONS"

[node name="DimensionsValue" type="Label" parent="VBoxContainer/ScrollContainer/ContentMargin/ContentContainer/DimensionsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "—"

[node name="CostSection" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ContentMargin/ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="CostLabel" type="Label" parent="VBoxContainer/ScrollContainer/ContentMargin/ContentContainer/CostSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "COST"

[node name="CostValue" type="Label" parent="VBoxContainer/ScrollContainer/ContentMargin/ContentContainer/CostSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "—"

[node name="DescriptionSection" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ContentMargin/ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/ScrollContainer/ContentMargin/ContentContainer/DescriptionSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "DESCRIPTION"

[node name="DescriptionValue" type="Label" parent="VBoxContainer/ScrollContainer/ContentMargin/ContentContainer/DescriptionSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "—"
autowrap_mode = 3
